# cookiecutter-meta

./: .editorconfig  LICENSE  README.md  cookiecutter.json  pyproject.toml
tests/: helper.py  test_bake_cookiecutter.py  test_bake_licenses_and_readme.py  test_bake_readme.py  test_bake_template.py  utils.py
{{cookiecutter.template_slug}}/: Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.template_slug}}/tests/: test_bake_project.py  test_bake_template.py
