[tool.poetry]
name = "cookiecutter-meta"
version = "0.1.0"
description = "A meta template of Cookiecutter allows you to quickly generate concrete templates."
authors = ["Garrett HE <garrett.he@hotmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/garrett-he/cookiecutter-meta"
repository = "https://github.com/garrett-he/cookiecutter-meta.git"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
