[tool.poetry]
name = "cookiecutter-meta"
version = "0.1.0"
description = "A meta template of Cookiecutter allows you to quickly generate concrete templates."
authors = ["Garrett HE <garrett.he@outlook.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/garrett-he/cookiecutter-meta"
repository = "https://github.com/garrett-he/cookiecutter-meta.git"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cookies = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
