[tool.poetry]
name = "{{ cookiecutter.template_name }}"
version = "0.1.0"
description = "{{ cookiecutter.template_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license_id }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_path }}"
repository = "https://github.com/{{ cookiecutter.github_path }}.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cookies = "^0.7.0"

[tool.pytest.ini_options]
addopts = "--ignore='{% raw %}{{cookiecutter.project_slug}}{% endraw %}'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
